--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body{
 	background-color: #fff9fc;
 }
 
-table, thead, td{
+table, th, td{
     border: 1px solid black;
     border-collapse: collapse;
     text-align: left;
